--- a/agents/repo-sentinel/package.json
+++ b/agents/repo-sentinel/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
     "@ai/openai-session": "workspace:*",
